2015-04-12 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-idates-filter.c: Fix myEditableDate initialization.

	* src/ui/ofa-accounts-filter-vv-bin.c,
	* src/ui/ofa-accounts-filter-vv-bin.h,
	* src/ui/ofa-accounts-filter-vv-bin.ui: new ofaAccountsFilterVVBin class.

	* src/ui/ofa-iaccounts-filter.c,
	* src/ui/ofa-iaccounts-filter.h: new ofaIAccountsFilter interface.

	* src/ui/Makefile.am,
	* src/ui/ofa-render-balances-bin.c,
	* src/ui/ofa-render-balances-bin.h,
	* src/ui/ofa-render-balances-bin.ui,
	* src/ui/ofa-render-balances-page.c: updated accordingly.

2015-04-11 Pierre Wieser <pwieser@trychlos.org>

	* src/api/ofa-settings.h,
	* src/core/ofa-settings.c: new ofa_settings_get_actual_keyfile() method.

	* src/ui/ofa-iprintable2.c,
	* src/ui/ofa-iprintable2.h,
	* src/ui/ofa-render-page.c,
	* src/ui/ofa-render-page.h,
	* src/ui/ofa-render-balances-page.c,
	* src/ui/ofa-render-balances-page.h: get and save print settings.

	* src/ui/ofa-render-balances-page.c,
	* src/ui/ofa-render-balances-page.h: new ofaRenderBalancesPage class.

	* src/ui/ofa-irenderable.c,
	* src/ui/ofa-irenderable.h: new ofaIRenderable interface.

2015-04-10 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-render-balances-bin.c,
	* src/ui/ofa-render-balances-bin.h,
	* src/ui/ofa-render-balances-bin.ui: new ofaRenderBalancesBin class.

	* src/ui/ofa-render-page.c,
	* src/ui/ofa-render-page.h,
	* src/ui/ofa-render-page.ui: new ofaRenderPage class.

	* src/ui/ofa-dos-menubar.ui,
	* src/ui/ofa-main-window.c: change "pdf-" action prefix with "render-".

	* src/ui/ofa-main-window.h: introduce new (future) theme identifiers.

	* src/ui/ofa-iprintable2.c,
	* src/ui/ofa-iprintable2.h: new ofaIPrintable interface.

2015-04-08 Pierre Wieser <pwieser@trychlos.org>

	Review ofaDateFilterBin API, moving it to ofaDatesFilterHVBin class
	and ofaIDatesFilter interface (todo #788).

	* src/ui/ofa-idates-filter.c,
	* src/ui/ofa-idates-filter.h: new files.
